--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "docker:down": "docker compose -f ./docker/postgres/docker-compose.yml down"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
@@ -31,6 +32,7 @@
     "@prisma/client": "^5.5.2",
     "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -47,6 +49,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.1",
+    "@types/cookie-parser": "^1.4.5",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
